# kalman_filter

./: Cargo.toml
src/: car.rs  kalman_filter.rs  main.rs  sensor_measurement.rs  sensors.rs  state.rs
src/sensors/: Encoder.rs  GPS.rs  IMU.rs  mod.rs
