[package]
name = "kalman_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.130.0"
image = "0.24.7"
imageproc = "0.23.0"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = "0.32.3"